# the_rust_lang_book

./: README.md
10_generic_types/: Cargo.toml
10_generic_types/src/: main.rs
11_traits/src/: main.rs
12_lifetime/: Cargo.toml
12_lifetime/src/: main.rs
13_testing_part1/: .gitignore  Cargo.toml
13_testing_part1/src/: lib.rs
14_testing_part2/: Cargo.toml
14_testing_part2/src/: lib.rs
14_testing_part2/tests/: integration_test.rs
15_16_minigrap_cli/: Cargo.toml
17_clousers/: Cargo.toml
1_get_started/: Cargo.toml  README.md  main
20_publishing_create/: Cargo.toml
21_workspaces/: Cargo.toml
22_smart_pointers_1/: Cargo.toml
23_smart_pointers_2/: Cargo.toml
26_smart_pointer_5_ref_cell/: Cargo.toml
28_creating_threads/: Cargo.toml
29_message_parssing_between_threads/: Cargo.toml
2_guessing_game/: Cargo.toml
30_sharing_state/: Cargo.toml
31_oriented_programming/: Cargo.toml
32_using_trait_objects/: Cargo.toml
33_state_design_pattern/: Cargo.toml
34_patters_and_matching/: Cargo.toml
35_unsafe/: Cargo.toml
36_advanced_traits_1/: Cargo.toml
3_common_programming_concepts/: Cargo.toml
6_enums_pattern_matching/: Cargo.toml
7_managing_growing_projects/: Cargo.toml
80_async_await/: Cargo.toml
81_actix/: Cargo.toml
81_actix/src/: single_actor.rs  single_actor_async_msgs.rs
81_socket_chat_with_tokio/: Cargo.toml  README.md
81_socket_chat_with_tokio/src/: main.rs
82_tokio/: Cargo.toml
83_tokio_actix/: Cargo.toml
83_tokio_futures/: Cargo.toml  README.md
8_common_collections/: Cargo.toml
9_error_handling/: Cargo.toml
(+46 files in other folders)
