[package]
name = "socket_chat_with_tokio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-rt = "2.2.0"
anyhow = "1.0"
tokio = { version = "1.16.1", features = ["full"] }
futures = "0.3"