[package]
name = "socket_chat_with_tokio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-rt = "1.1"
anyhow = "1.0"
tokio = { version = "1.11.0", features = ["full"] }
futures = "0.3"